hphp/hack/test/typecheck/decl_fun_expr_hints.php.exp
File "decl_fun_expr_hints.php", line 16, characters 5-14:
Break/continue N operators are not supported. (NastCheck[3040])
